# NewsPickStocks

./: .env.example  .gitignore  d  pyproject.toml
data/: data.txt  example.txt  mirae.txt
src/: app.py  rag.py
src/db/: document_store.py
src/executors/: completion_executor.py  embedding_executor.py  segmentation_executor.py
src/utils/: chunk_filter.py  clean_text.py  setup.py  split_article_and_metadata.py  stock_analysis.py
